--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
           href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600;700&display=swap"
           rel="stylesheet">
     <title>Mahdi Chavoshi - Frontend Developer | مهدی چاوشی - توسعه دهنده فرانت‌اند</title>
-
 </head>
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.js"></script>
 </body>
+<style>
+    html {
+        scroll-behavior: smooth
+    }
+</style>
 </html>
